redirected the default initial screen to login page

--- a/src/main/webapp/app/shared/login/login.component.html
+++ b/src/main/webapp/app/shared/login/login.component.html
@@ -1,23 +1,26 @@
+<!-- <h1>Login here</h1> -->
+
+
 <div class="modal-header">
-    <h4 class="modal-title">Sign in</h4>
-    <button aria-label="Close" data-dismiss="modal" class="close" type="button" (click)="activeModal.dismiss('closed')"><span aria-hidden="true">x</span>
-    </button>
+    <h4 class="modal-title">Let's go</h4>
+    <!-- <button aria-label="Close" data-dismiss="modal" class="close" type="button" (click)="activeModal.dismiss('closed')"><span aria-hidden="true">x</span>
+    </button> -->
 </div>
 <div class="modal-body">
     <div class="row justify-content-center">
         <div class="col-md-8">
             <div class="alert alert-danger" *ngIf="authenticationError">
-                <strong>Failed to sign in!</strong> Please check your credentials and try again.
+                <!-- <strong>Failed to sign in!</strong> Please check your credentials and try again. -->
             </div>
         </div>
         <div class="col-md-8">
             <form class="form" role="form" (ngSubmit)="login()" [formGroup]="loginForm">
                 <div class="form-group">
-                    <label class="username-label" for="username">Login</label>
-                    <input type="text" class="form-control" name="username" id="username" placeholder="Your username"
-                           formControlName="username" #username>
+                    <label class="username-label" for="username">Email or unique username to identify yourself in future</label>
+                    <input type="text" class="form-control" name="id" id="id" placeholder="pretty buoy...."
+                           formControlName="id" #username>
                 </div>
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <label for="password">Password</label>
                     <input type="password" class="form-control" name="password" id="password" placeholder="Your password"
                            formControlName="password">
@@ -27,17 +30,17 @@
                         <input class="form-check-input" type="checkbox" name="rememberMe" id="rememberMe" formControlName="rememberMe">
                         <span>Remember me</span>
                     </label>
-                </div>
+                </div> -->
                 <button type="submit" class="btn btn-primary">Sign in</button>
             </form>
             <p></p>
-            <div class="alert alert-warning">
+            <!-- <div class="alert alert-warning">
                 <a class="alert-link" (click)="requestResetPassword()">Did you forget your password?</a>
             </div>
             <div class="alert alert-warning">
                 <span>You don't have an account yet?</span>
                 <a class="alert-link" (click)="register()">Register a new account</a>
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
