--- a/src/main/webapp/app/shared/login/login.component.html
+++ b/src/main/webapp/app/shared/login/login.component.html
@@ -31,7 +31,7 @@
                         <span>Remember me</span>
                     </label>
                 </div> -->
-                <button type="submit" class="btn btn-primary">Sign in</button>
+                <button type="submit" mat-button color="primary">Start</button>
             </form>
             <p></p>
             <!-- <div class="alert alert-warning">
